--- a/help/강좌 둘러보기.md
+++ b/help/강좌 둘러보기.md
@@ -1,3 +1,5 @@
+[help](메인.md) > [수강생](수강생.md) > 강좌 둘러보기
+
 #### 에듀캐스트에 어떤 강좌가 있는지 볼 수 있을까요?
 네, 사이트 우상단에 있는 '모든 강좌 보기' 버튼을 클릭하시거나  
 [이곳](https://educast.pro/search/)을 클릭하시면 에듀캐스트에 올라와 있는 모든 강좌를 둘러보실 수 있습니다.  
@@ -6,13 +8,14 @@
 
 #### 듣고 싶은 강좌가 생겼어요. 그런데 괜찮은 강좌인지 확인해보고 싶어요.
 해당 강좌의 강좌 페이지에는 강좌에 대한 정보가 모두 담겨 있습니다.  
-강좌 소개는 강사님께서 직접 작성하신 내용으로 강좌의 구성, 강좌 내용, 수강 대상 등 강사님이 필요로 하다고 생각하시는 모든 정보가 담겨 있습니다. 강좌에 흥미가 있으시다면 꼭 꼼꼼히 읽어주세요.  
+강좌 소개는 강사님께서 직접 작성하신 내용으로 강좌의 구성, 강좌 내용, 수강 대상 등   
+강사님이 필요로 하다고 생각하시는 모든 정보가 담겨 있습니다. 강좌에 흥미가 있으시다면 꼭 꼼꼼히 읽어주세요.  
 커리큘럼에서 '맛보기' 라고 되어 있는 강의들은 들어보실 수 있습니다.  
 강좌를 수강하시기 전에 맛보기를 보시면 어떤 강좌인지 한층 더 정확하게 이해하실 수 있습니다.
 
 #### 강좌에서 확인하고 싶은 점이 있어요. 선생님께 연락해볼 수 있는 방법이 있나요?
 강좌 페이지 오른쪽에 선생님 정보 탭이 있습니다.  
-선생님 탭의 선생님 성함 오른쪽에 있는 메일 아이콘을 클릭하시면 해당 선생님께 쪽지를 보낼 수 있습니다.
+선생님 탭의 선생님 성함 오른쪽에 있는 '메일 아이콘'을 클릭하시면 해당 선생님께 쪽지를 보낼 수 있습니다.
 
 #### 선생님이 쪽지를 안 읽으시는 것 같아요. 선생님의 메일 주소나 전화번호를 알 수 있나요?
 죄송하지만 에듀캐스트에서는 타인의 회원 정보를 제공해드릴 수 없습니다.  
