--- a/help/강좌 결제.md
+++ b/help/강좌 결제.md
@@ -31,6 +31,10 @@
 결제하신 영수증은 결제 대행사 측에서 자동적으로 로그인 할 때 사용하시는 메일주소로 발송해드립니다.
 약간의 시간이 소요될 수 있으니 조금만 기다려주시면 감사하겠습니다.
 
+#### 현금 영수증을 발급받을 수 있나요?
+현금 영수증 또한 일반 영수증과 마찬가지로 메일주로로 발송됩니다.
+현금 영수증의 경우 4~5시간 정도 소요되는 경우가 있으니 결제 다음 날 한번 확인해보시는 것은 어떨까요?
+
 #### 강의를 환불하고 싶은데 어떻게 할 수 있나요?
 [환불이 가능한 강의](정책 안내.md)에 대해서는 우상단의 '유저명'을 클릭하면 나오는 메뉴의 '결제 정보' 탭에서 환불하실 수 있습니다.  
 카드 및 핸드폰 결제 내역을 환불하시는 경우 결제 대행사 측에서 일괄적으로 처리되며 평균적으로 X일 이내에 입금됩니다.  
