강사 도움말 뼈대

--- a/help/강사.md
+++ b/help/강사.md
@@ -1,5 +1,5 @@
-1. 선생님 등록
-2. 강좌 업로드
-3. 강좌 관리
-4. 정산
-5. 보안
+1. [선생님 등록](선생님 등록.md)
+2. [강좌 업로드](강좌 업로드.md)
+3. [강좌 관리](강좌 관리.md)
+4. [수익 정산](수익 정산.md)
+5. [보안](보안.md)
