--- a/help/강의 재생.md
+++ b/help/강의 재생.md
@@ -1,3 +1,5 @@
+[help](메인.md) > [수강생](수강생.md) > 강의 재생
+
 #### 강의를 배속으로 재생할 수 있나요?
 네 가능합니다.  
 '강의 재생 창' 우하단의 '1x'라고 쓰여있는 곳을 클릭하시면 강의 재생 속도를 조정하실 수 있습니다.
