--- a/help/계정.md
+++ b/help/계정.md
@@ -1,3 +1,5 @@
+[help](메인.md) > [수강생](수강생.md) > 계정
+
 #### 페이스북 연동을 끊고 싶어요. 어떻게 해야 하나요?
 죄송합니다. 페이스북 연동 끊기 기능은 추가중에 있습니다.  
 불편하시겠지만 [1:1 문의](https://educast.pro/support/qna/create/)를 통해서 요청해주시면 연동 끊기 및 비밀번호 설정을 도와드리겠습니다.
