--- a/help/내 강좌.md
+++ b/help/내 강좌.md
@@ -1,3 +1,5 @@
+[help](메인.md) > [수강생](수강생.md) > 내 강좌
+
 #### 강좌를 수강하기 시작했는데 내 강좌에 뜨지 않아요.
 무통장 입금을 통해서 결제하신 경우 수강 처리까지 약간의 시간이 걸릴 수 있습니다. [관련 도움말](강좌 결제.md)  
 혹은 강좌가 [보관함](내 강좌.md)에 보관되어 있을 수도 있습니다.   
