--- a/_posts/2016-01-02-student.md
+++ b/_posts/2016-01-02-student.md
@@ -3,9 +3,9 @@ layout: post
 title:  "student"
 category: student
 ---
-{% post_url student %}
+{% post_url 2016-01-02-student %}
 
-1. [강좌 둘러보기]({% post_url browse %})
+1. [강좌 둘러보기]({% post_url 2016-01-02-browse %})
 2. [강좌 결제](강좌 결제.md)
 3. [정책 안내](정책 안내.md)
 4. [계정](계정.md)
