--- a/_posts/2016-01-02-browse.md
+++ b/_posts/2016-01-02-browse.md
@@ -3,7 +3,7 @@ layout: post
 title:  "browse"
 category: student
 ---
-{% post_url browse %}
+{% post_url 2016-01-02-browse %}
 
 #### 에듀캐스트에 어떤 강좌가 있는지 볼 수 있을까요?
 네, 사이트 우상단에 있는 '모든 강좌 보기' 버튼을 클릭하시거나
@@ -21,7 +21,7 @@ category: student
 #### 강좌에서 확인하고 싶은 점이 있어요. 선생님께 연락해볼 수 있는 방법이 있나요?
 강좌 페이지 오른쪽에 '선생님 정보 탭'이 있습니다.
 선생님 탭의 선생님 성함 오른쪽에 있는 '메일 아이콘'을 클릭하시면 해당 선생님께 쪽지를 보낼 수 있습니다.
-또한 [선생님 페이지](강좌 둘러보기.md)에서도 '쪽지보내기'를 통해서 선생님께 쪽지를 보낼 수 있습니다.
+또한 [선생님 페이지]({% post_url 2016-01-02-browse %}#선생님-페이지는-무엇인가요?)에서도 '쪽지보내기'를 통해서 선생님께 쪽지를 보낼 수 있습니다.
 
 #### 선생님 페이지는 무엇인가요?
 '강좌 카드'의 선생님 성함이나 강좌 페이지의 '선생님 정보 탭'에 있는 선생님 성함을 클릭하시면 선생님 페이지에 들어가실 수 있습니다.
