student part done

--- a/_posts/2016-01-02-account.md
+++ b/_posts/2016-01-02-account.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "profile"
+title:  "account"
 category: student
 ---
-{% post_url 2016-01-02-profile %}
+{% post_url 2016-01-02-account %}
 
 #### 페이스북 연동을 끊고 싶어요. 어떻게 해야 하나요?
 죄송합니다. 페이스북 연동 끊기 기능은 추가중에 있습니다.
@@ -15,8 +15,8 @@ category: student
 
 #### 이름을 변경하고 싶어요.
 죄송합니다. 이름 변경 기능은 추가중에 있습니다.
-불편하시겠지만 [1:1 문의](https://educast.pro/support/qna/create/)를 통해서 요청해주시면 이름 변경을 도와드리겠습니다. ~~복붙~~
+불편하시겠지만 [1:1 문의](https://educast.pro/support/qna/create/)를 통해서 요청해주시면 이름 변경을 도와드리겠습니다. ~~복붙 죄송합니다~~
 
 #### 탈퇴하고 싶어요.
 죄송합니다. 탈퇴 기능은 추가중에 있습니다.
-불편하시겠지만 [1:1 문의](https://educast.pro/support/qna/create/)를 통해서 요청해주시면 탈퇴를 도와드리겠습니다. ~~복붙2~~
+불편하시겠지만 [1:1 문의](https://educast.pro/support/qna/create/)를 통해서 요청해주시면 탈퇴를 도와드리겠습니다. ~~복붙 죄송합니다2~~
