--- a/_posts/2016-01-02-mycourse.md
+++ b/_posts/2016-01-02-mycourse.md
@@ -25,19 +25,19 @@ category: student
 
 #### 완료한 강좌라는 것은 어떤 의미인가요?
 강좌를 80% 이상 수강하시면 완료한 강좌로 계산되며, 수강률이 녹색으로 표시됩니다.
-[EPIC강좌](정책 안내.md)의 경우 무제한으로 수강 가능하게 됩니다.
+[EPIC강좌]({% post_url 2016-01-02-policy %}#EPIC-정책이-무엇인가요?)의 경우 무제한으로 수강 가능하게 됩니다.
 
 #### 강좌 리스트 우상단의 '땡떙땡'은 뭔가요?
 '엘립시스'에서는 해당 강좌와 관련된 기능들을 수행하실 수 있습니다.
-'강좌 페이지 보기'를 클릭하시면 [강좌의 페이지](강좌 둘러보기.md)로 이동하게 됩니다.
+'강좌 페이지 보기'를 클릭하시면 [강좌의 페이지]({% post_url 2016-01-02-browse %}#듣고-싶은-강좌가-생겼어요.-그런데-괜찮은-강좌인지-확인해보고-싶어요.)로 이동하게 됩니다.
 '수강평 작성'을 통해 수강평을 작성하실 수 있습니다.
 '즐겨찾기 지정/해제'를 통해서 강좌를 내 강좌 리스트 상단의 즐겨찾기로 올리거나 해제하실 수 있습니다.
-'보관함으로 이동/내 강좌로 이동'을 통해 강좌를 [보관함](내 강좌.md)에 넣거나 보관함에서 뺄 수 있습니다.
-'일시정지/일시정지 해제'를 통해 강좌를 [일시정지](정책 안내.md)하실 수 있습니다.
+'보관함으로 이동/내 강좌로 이동'을 통해 강좌를 [보관함]({% post_url 2016-01-02-mycourse %}#보관함은-무엇인가요?)에 넣거나 보관함에서 뺄 수 있습니다.
+'일시정지/일시정지 해제'를 통해 강좌를 [일시정지]({% post_url 2016-01-02-policy %}#일시정지는-얼마나-할-수-있나요?)하실 수 있습니다.
 
 #### 보관함은 무엇인가요?
 보관함은 내 강좌 우상단의 '탭'을 변경하여 들어가실 수 있습니다.
-내 강좌에 강좌가 너무 많아서 번거로우실 때, 더 이상 듣지 않거나 만료된 강좌 등을 [보관함으로 이동](내 강좌.md)시키시면 내 강좌 탭을 조금 더 깔끔하게 이용하실 수 있습니다.
+내 강좌에 강좌가 너무 많아서 번거로우실 때, 더 이상 듣지 않거나 만료된 강좌 등을 [보관함으로 이동]({% post_url 2016-01-02-mycourse %}#강좌-리스트-우상단의-'땡떙땡'은-뭔가요?)시키시면 내 강좌 탭을 조금 더 깔끔하게 이용하실 수 있습니다.
 
 #### 강좌를 수강했는데 수강률이 올라가지 않아요.
 간헐적으로 강좌 수강률이 비정상적으로 높게 표시되거나 수강을 했는데도 수강률이 올라가지 않는 현상이 있습니다.
