--- a/_posts/2016-01-02-student.md
+++ b/_posts/2016-01-02-student.md
@@ -6,9 +6,9 @@ category: student
 {% post_url 2016-01-02-student %}
 
 1. [강좌 둘러보기]({% post_url 2016-01-02-browse %})
-2. [강좌 결제](강좌 결제.md)
-3. [정책 안내](정책 안내.md)
-4. [계정](계정.md)
-5. [내 강좌](내 강좌.md)
-6. [강의 재생](강의 재생.md)
+2. [강좌 결제]({% post_url 2016-01-02-payment %})
+3. [정책 안내]({% post_url 2016-01-02-policy %})
+4. [계정]({% post_url 2016-01-02-account %})
+5. [내 강좌]({% post_url 2016-01-02-mycourse %})
+6. [강의 재생]({% post_url 2016-01-02-play %})
 7. [기타 수강 관련](기타 수강 관련.md)
