done changing to Jekyll format

--- a/_posts/2016-01-02-student.md
+++ b/_posts/2016-01-02-student.md
@@ -11,4 +11,4 @@ category: student
 4. [계정]({% post_url 2016-01-02-account %})
 5. [내 강좌]({% post_url 2016-01-02-mycourse %})
 6. [강의 재생]({% post_url 2016-01-02-play %})
-7. [기타 수강 관련](기타 수강 관련.md)
+7. [기타 수강 관련]({% post_url 2016-01-02-etc %})
