teacher part completed

--- a/_posts/2016-01-02-paycheck.md
+++ b/_posts/2016-01-02-paycheck.md
@@ -6,9 +6,16 @@ category: teacher
 {% post_url 2016-01-02-paycheck %}
 
 #### 수익 분배는 어떻게 이루어지나요?
+선생님과 에듀캐스트의 수익분배(Revenue Share)는 7:3으로 나눠집니다.  
+에듀캐스트는 강의 판매 시, 발생한 부가세 및 금융수수료(결제수수료)를 제외한 수익의 70%를 강사에게 분배합니다.  
 
-#### 제가 번 돈이 얼마인지 어디에서 확인할 수 있나요?
+#### 수익 정산은 언제 진행되나요?
+강의 판매에 따른 수익 정산 및 지급은 월 단위로 진행되며, 당월의 판매수익은 매달 익월 20일날 지급됩니다.  
 
-#### 수익 정산은 언제 이루어지나요?
+#### 제가 번 수익이 얼마인지 어디에서 확인할 수 있나요?
+에듀캐스트 선생님으로 등록하셨다면 제일 우측 상단에 본인 이름을 클릭하시면 [선생님 페이지] 탭이 보이실 겁니다.  
+선생님 페이지를 클릭하신 후, 좌측 상단에 보이는 여러 탭 중 [수익 및 지급]에 속한 [수익 개요]에 가시면 수익을 확인하실 수 있습니다.  
 
-#### 지난 달 정산을 못받았어요. 어떻게 하면되나요?
+#### 지난 달 정산을 못 받았어요.
+에듀캐스트는 매월 20일에 전월에 판매된 강의수익을 지급해드리고 있습니다.
+만약 전 달에 강의가 판매됐는데 정산을 못 받으셨다면, 저희 사무실 전화번호 02-883-0806로 연락을 주시거나 에듀캐스트 페이지에서 1:1 문의를 주시면 정산처리 담당자가 신속히 처리해드립니다.  
