Student / Teacher Page, Post 구조 변경

--- a/_posts/2016-01-02-account.md
+++ b/_posts/2016-01-02-account.md
@@ -1,9 +1,8 @@
 ---
-layout: post
-title:  "account"
+title:  "계정"
 category: student
+order: 4
 ---
-{% post_url 2016-01-02-account %}
 
 #### 페이스북 연동을 끊고 싶어요. 어떻게 해야 하나요?
 죄송합니다. 페이스북 연동 끊기 기능은 추가중에 있습니다.
