--- a/_posts/2016-01-02-browse.md
+++ b/_posts/2016-01-02-browse.md
@@ -1,9 +1,8 @@
 ---
-layout: post
-title:  "browse"
+title:  "강좌 둘러보기"
 category: student
+order: 1
 ---
-{% post_url 2016-01-02-browse %}
 
 #### 에듀캐스트에 어떤 강좌가 있는지 볼 수 있을까요?
 네, 사이트 우상단에 있는 '모든 강좌 보기' 버튼을 클릭하시거나
