--- a/_posts/2016-01-02-etc.md
+++ b/_posts/2016-01-02-etc.md
@@ -1,9 +1,8 @@
 ---
-layout: post
-title:  "etc"
+title:  "기타 수강 관련"
 category: student
+order: 7
 ---
-{% post_url 2016-01-02-etc %}
 
 #### 강의소개에 교재가 있다고 했는데, 교재는 어떻게 구할 수 있나요?
 강좌에 따라 선생님께서 교재를 직접 교부해주시는 경우가 있습니다.
