--- a/_posts/2016-01-02-mycourse.md
+++ b/_posts/2016-01-02-mycourse.md
@@ -1,9 +1,8 @@
 ---
-layout: post
-title:  "mycourse"
+title:  "내 강좌"
 category: student
+order: 5
 ---
-{% post_url 2016-01-02-mycourse %}
 
 #### 강좌를 수강하기 시작했는데 내 강좌에 뜨지 않아요.
 무통장 입금을 통해서 결제하신 경우 수강 처리까지 약간의 시간이 걸릴 수 있습니다. [관련 도움말]({% post_url 2016-01-02-payment %}#무통장-입금을-했는데-강의-수강이-안돼요)
