--- a/_posts/2016-01-02-payment.md
+++ b/_posts/2016-01-02-payment.md
@@ -1,9 +1,8 @@
 ---
-layout: post
-title:  "payment"
+title:  "강좌 결제"
 category: student
+order: 2
 ---
-{% post_url 2016-01-02-payment %}
 
 #### 강의를 결제하고 싶은데 어떤 방법이 가능한가요?
 에듀캐스트에서는 무통장 입금, 신용카드, 실시간 계좌이체, 핸드폰 결제를 지원합니다.
