--- a/_posts/2016-01-02-play.md
+++ b/_posts/2016-01-02-play.md
@@ -1,9 +1,8 @@
 ---
-layout: post
-title:  "play"
+title:  "강의 재생"
 category: student
+order: 6
 ---
-{% post_url 2016-01-02-play %}
 
 #### 강의를 배속으로 재생할 수 있나요?
 네 가능합니다.
