--- a/_posts/2016-01-02-policy.md
+++ b/_posts/2016-01-02-policy.md
@@ -1,9 +1,8 @@
 ---
-layout: post
-title:  "policy"
+title:  "정책 안내"
 category: student
+order: 3
 ---
-{% post_url 2016-01-02-policy %}
 
 #### EPIC 정책이 무엇인가요?
 EPIC은 Eighty Percent Infinite Course-take 의 약자로 ~~끼워맞춰서 죄송합니다~~
