--- a/_posts/2016-01-02-security.md
+++ b/_posts/2016-01-02-security.md
@@ -1,8 +1,7 @@
 ---
-layout: post
-title:  "security"
+title:  "보안"
 category: teacher
+order: 5
 ---
-{% post_url 2016-01-02-security %}
 
 #### 제 강좌가 불법으로 공유될까봐 불안해요.
