--- a/_posts/2016-02-07-paycheck.md
+++ b/_posts/2016-02-07-paycheck.md
@@ -1,9 +1,8 @@
 ---
-title:  "수익 정산"
+title: 수익 정산
 category: teacher
 order: 4
 ---
-
 #### 수익 분배는 어떻게 이루어지나요?
 선생님과 에듀캐스트의 수익분배(Revenue Share)는 7:3으로 나눠집니다.
 에듀캐스트는 강의 판매 시, 발생한 부가세 및 금융수수료(결제수수료)를 제외한 수익의 70%를 강사에게 분배합니다.
