--- a/_posts/2016-02-07-payment.md
+++ b/_posts/2016-02-07-payment.md
@@ -1,9 +1,8 @@
 ---
-title:  "강좌 결제"
+title: 강좌 결제
 category: student
 order: 2
 ---
-
 #### 강의를 결제하고 싶은데 어떤 방법이 가능한가요?
 에듀캐스트에서는 무통장 입금, 신용카드, 실시간 계좌이체, 핸드폰 결제를 지원합니다.
 결제 대행사 및 카드회사의 정책에 따라서 일부 신용카드와 실시간 계좌이체 거래에 대해서는
@@ -40,7 +39,7 @@ order: 2
 현금 영수증의 경우 4~5시간 정도 소요되는 경우가 있으니 결제 다음 날 한번 확인해보시는 것은 어떨까요?
 
 #### 강의를 환불하고 싶은데 어떻게 할 수 있나요?
-[환불이 가능한 강의]({% post_url 2016-01-02-policy %}#강의를-환불-받고-싶어요)에 대해서는 우상단의 '유저명'을 클릭하면 나오는 메뉴의 '결제 정보' 탭에서 환불하실 수 있습니다.
+[환불이 가능한 강의]({% post_url 2016-02-07-policy %}#강의를-환불-받고-싶어요)에 대해서는 우상단의 '유저명'을 클릭하면 나오는 메뉴의 '결제 정보' 탭에서 환불하실 수 있습니다.
 카드 및 핸드폰 결제 내역을 환불하시는 경우 결제 대행사 측에서 일괄적으로 처리되며 평균적으로 X일 이내에 입금됩니다.
 실시간 계좌이체나 무통장 입금을 통해서 결제하신 내역을 환불하시는 경우 환불 요청시 입력하신 계좌번호에 3영업일 이내에 입금해드립니다.
 기타 환불에 관해서 궁금하신 사항이 있으시다면 에듀캐스트 고객센터(02-883-0806)에 연락주시거나 [1:1 문의](https://educast.pro/support/qna/create/)를 남겨 주시면 빠르게 해결해드리도록 하겠습니다.
