--- a/_posts/2016-02-07-play.md
+++ b/_posts/2016-02-07-play.md
@@ -1,9 +1,8 @@
 ---
-title:  "강의 재생"
+title: 강의 재생
 category: student
 order: 6
 ---
-
 #### 강의를 배속으로 재생할 수 있나요?
 네 가능합니다.
 '강의 재생 창' 우하단의 '1x'라고 쓰여있는 곳을 클릭하시면 강의 재생 속도를 조정하실 수 있습니다.
