--- a/_posts/2016-02-18-play.md
+++ b/_posts/2016-02-18-play.md
@@ -6,16 +6,9 @@ order: 6
 #### 강의를 배속으로 재생할 수 있나요?
 네 가능합니다.
 
-데스크탑 및 모바일 웹 브라우저에서는 플레이어의 우측 하단에 있는
-[1x]에 커서를 올려 배속을 선택할 수 있습니다.
+데스크탑 및 모바일 웹 브라우저에서는 플레이어의 우측 하단에 있는 [1x]에 커서를 올려 배속을 선택할 수 있습니다. 만약 하단에 [1x] 버튼이 없거나, 버튼을 눌러도 동작을 하지 않는 경우에는 배속 재생이 지원되지 않는 브라우저 및 운영체제를 사용하기 때문일 수 있습니다. 아래의 브라우저 및 운영체제 목록에서 O 표시가 되어있는 경우에만 배속 재생이 지원됩니다. 고객님께서 사용하고 있는 브라우저 및 운영체제 정보는 [여기]에서 확인할 수 있습니다.
 
-만약 하단에 [1x] 버튼이 없거나, 버튼을 눌러도 동작을 하지 않는 경우에는 
-배속 재생이 지원되지 않는 브라우저 및 운영체제를 사용하기 때문일 수 있습니다.
-아래의 브라우저 및 운영체제 목록에서 O 표시가 되어있는 경우에만 배속 재생이 지원됩니다.
-
-만약 O 표시가 되어있는 브라우저 및 운영체제를 사용하고 있음에도 불구하고
-배속 재생이 되지 않는 경우, [1:1문의]에 의견을 남겨주시면 원격 지원 등의
-방법을 이용하여 해결해드리겠습니다.
+만약 O 표시가 되어있는 브라우저 및 운영체제를 사용하고 있음에도 불구하고 배속 재생이 되지 않는 경우, [1:1문의]에 의견을 남겨주시면 원격 지원 등의 방법을 이용하여 해결해드리겠습니다.
 
 |                   | Chrome (38이상) | Firefox (42이상) | Safari (8이상) | Edge | IE11 | IE10 | IE9 | IE8 | Android Browser |
 |-------------------|-----------------|------------------|----------------|------|------|------|-----|-----|-----------------|
@@ -32,10 +25,8 @@ order: 6
 | iOS 9             |        O        |         ?        |        O       |      |      |      |     |     |                 |
 | iOS 8             |        O        |         ?        |        O       |      |      |      |     |     |                 |
 
-고객님께서 사용하고 있는 브라우저 및 운영체제 정보는 [여기]에서 확인할 수 있습니다.
 
-안드로이드 어플리케이션에서는 기종과 상관없이 배속이 지원됩니다.
-재생 창의 오른쪽 상단에 [1.0x] 버튼을 누르시면 배속을 선택할 수 있습니다.
+안드로이드 어플리케이션에서는 기종과 상관없이 배속이 지원됩니다. 재생 창의 오른쪽 상단에 [1.0x] 버튼을 누르시면 배속을 선택할 수 있습니다.
 
 #### 배속 재생을 했더니 싱크가 맞지 않아요.
 
