--- a/_posts/2016-04-05-play.md
+++ b/_posts/2016-04-05-play.md
@@ -10,7 +10,7 @@ order: 6
 
 만약 O 표시가 되어있는 브라우저 및 운영체제를 사용하고 있음에도 불구하고 배속 재생이 되지 않는 경우, [1:1문의]에 의견을 남겨주시면 원격 지원 등의 방법을 이용하여 해결해드리겠습니다.
 
-|                   | Chrome (38이상) | Firefox (42이상) | Safari (8이상) | Edge | IE11 | IE10 | IE9 | IE8 | Android Browser |
+|                   | Chrome<br>(38이상) | Firefox<br>(42이상) | Safari<br>(8이상) | Edge | IE11 | IE10 | IE9 | IE8 | Android<br>Browser |
 |-------------------|-----------------|------------------|----------------|------|------|------|-----|-----|-----------------|
 | Windows 10        |        O        |         O        |                |   O  |   O  |      |     |     |                 |
 | Windows 8.1       |        O        |         O        |                |      |   O  |   O  |     |     |                 |
@@ -28,8 +28,12 @@ order: 6
 
 안드로이드 어플리케이션에서는 기종과 상관없이 배속이 지원됩니다. 재생 창의 오른쪽 상단에 [1.0x] 버튼을 누르시면 배속을 선택할 수 있습니다.
 
+---
+
 #### 배속 재생을 했더니 싱크가 맞지 않아요.
 
+
+---
 
 #### 버퍼링이 심하고 강좌 수강하는 데 너무 끊겨요.
 버퍼링 현상은
@@ -39,14 +43,22 @@ order: 6
 인터넷 속도 확인 
 다른 어플리케이션 
 
+---
+
 #### 강좌를 수강하는 데 너무 끊겨요.
 ㅁㄴㅇㄹ
+
+---
 
 #### 소리가 나오지 않아요.
 
 
+---
+
 #### 재생이 안돼요.
 
+
+---
 
 #### 강의를 다운로드할 수 있나요?
 다운로드 기능은 4월 중에 제공할 예정입니다. Android / iOS의 에듀캐스트 앱에서 수강 기간 내에 다운로드 한 강좌를 수강할 수 있는 기능을 제공할 예정입니다.
