Update Help Center Pages

--- a/_posts/2016-04-05-play.md
+++ b/_posts/2016-04-05-play.md
@@ -25,7 +25,7 @@ order: 6
 | iOS 9             |        O        |         ?        |        O       |      |      |      |     |     |                 |
 | iOS 8             |        O        |         ?        |        O       |      |      |      |     |     |                 |
 
-
+  
 안드로이드 어플리케이션에서는 기종과 상관없이 배속이 지원됩니다. 재생 창의 오른쪽 상단에 [1.0x] 버튼을 누르시면 배속을 선택할 수 있습니다.
 
 ---
@@ -45,20 +45,36 @@ order: 6
 
 ---
 
-#### 강좌를 수강하는 데 너무 끊겨요.
-ㅁㄴㅇㄹ
-
----
-
 #### 소리가 나오지 않아요.
 
 
 ---
 
 #### 재생이 안돼요.
-
+강의가 재생 불가능 문제는 몇 가지의 원인으로 인해서 발생할 수 있습니다.
+  
+첫번째로, 고객님께서 사용하시는 브라우저와 네트워크 환경 등의 문제가 있을 수 있습니다.
+재생 문제가 발생하는 경우는 주로 인터넷 익스플로러 환경이었으며, 
+각종 Active X나 악성코드 등의 영향으로 보안 레벨이 내려가 있을 수 있습니다.
+저희 에듀캐스트는 최신버전의 크롬브라우저에 최적화되어 있으므로, 
+불편하시겠지만 우선 [크롬 최신버전](https://www.google.co.kr/chrome/browser/desktop/)을 설치해서 시도해주시면 감사하겠습니다.
+  
+두번째로, 서버의 일시적인 오류일 수 있습니다.
+저희 에듀캐스트는 Microsoft의 Azure를 통해서 고객님께 스트리밍 서비스를 제공해드리고 있습니다.
+하지만 서버가 불안정해지는 상황이 종종 발생하고 있으며, 
+이 때 원활한 수강이 불가능하여, 고객님들께서 많은 문의를 남겨주셨습니다.
+서버의 장애는 보통 수 분, 길게는 수 십분 이내의 일시적인 장애로, 잠시 기다리셨다가 시도하시면 원활한 수강이 가능합니다.
+현재 저희는 Microsoft에 지속적으로 오류보고를 통해 이런 문제를 해결하기 위한 모든 노력을 기울이고 있습니다.
+불편하시더라도 너그러이 이해해주시면, 더 나아진 서비스를 통해 보답드리겠습니다.
+  
+마지막으로, 영상 자체나 에듀캐스트 내부의 문제로 발생할 수 있습니다.
+다른 강의들은 원활한 수강이 가능한데, 한 개의 강의만 문제가 발생한다면 이 케이스일 가능성이 있습니다.
+만약 최신 OS와 크롬 브라우저를 사용하시면서, 재생 불가능 문제가 일시적이지 않다면(30분 이상 지속),
+[1:1 문의](https://educast.pro/support/qna/create/)나 유선(02-883-0806)을 통해 사용기기, OS, 브라우저 종류 및 버전, 수강하시려는 강좌의 강의명 등을 남겨주세요.
+최대한 빠르게 해결해드릴 수 있도록 노력하겠습니다.
 
 ---
 
-#### 강의를 다운로드할 수 있나요?
-다운로드 기능은 4월 중에 제공할 예정입니다. Android / iOS의 에듀캐스트 앱에서 수강 기간 내에 다운로드 한 강좌를 수강할 수 있는 기능을 제공할 예정입니다.
+#### 강의를 다운로드할 수 있나요? (앱)
+Android / iOS의 에듀캐스트 앱에서 수강 기간 내에 다운로드 한 강좌를 수강할 수 있는 기능을 제공할 예정입니다.
+2016년 5월 중에 추가 예정이오니 조금만 기다려주세요.
