Update Help Center Pages

--- a/_posts/2016-04-07-play.md
+++ b/_posts/2016-04-07-play.md
@@ -10,8 +10,14 @@ PC/Mac 에서는 최신 버전의 [Chrome 브라우저](https://www.google.co.kr
 Android에서는 [에듀캐스트 앱](https://play.google.com/store/apps/details?id=com.tntcrowd.educast),
 그리고 iOS에서는 기본 Safari 브라우저를 사용하시면 쾌적하게 강의를 재생하실 수 있습니다.
 
-고객님의 현재 브라우저 및 운영체제는 아래와 같습니다.
-<p id="environment-section"></p>
+고객님의 현재 브라우저, 운영체제, 디바이스는 아래와 같습니다.
+
+<p id="environment-section">
+|            브라우저           |         운영체제         |            디바이스          |
+|-------------------------------|--------------------------|------------------------------|
+| <span class="browser"></span> | <span class="os"></span> | <span class="device"></span> |
+</p>
+
 ---
 
 #### 재생이 안돼요.
