--- a/_posts/2016-04-07-play.md
+++ b/_posts/2016-04-07-play.md
@@ -12,11 +12,9 @@ Android에서는 [에듀캐스트 앱](https://play.google.com/store/apps/detail
 
 고객님의 현재 브라우저, 운영체제, 디바이스는 아래와 같습니다.
 
-<p id="environment-section">
 |            브라우저           |         운영체제         |            디바이스          |
 |-------------------------------|--------------------------|------------------------------|
-| <span class="browser"></span> | <span class="os"></span> | <span class="device"></span> |
-</p>
+| <span class="user-env browser"></span> | <span class="user-env os"></span> | <span class="user-env device"></span> |
 
 ---
 
