--- a/_posts/2016-06-30-channel.md
+++ b/_posts/2016-06-30-channel.md
@@ -18,23 +18,25 @@ order: 6
 ####	채널 정보는 어떻게 입력해야 하나요?
 채널 정보에는 채널명, 로고 이미지, 채널 소개 등 3가지의 정보를 입력하는 공간이 있습니다.
 
-채널명에는 원하시는 채널의 이름을 입력하시면 됩니다. 이 채널명은 채널 사이트 내 네이게이션에 항시 표시되며, 
-별도의 선생님을 등록하지 않으신 경우 강좌의 선생님 정보에도 표시됩니다.
+채널명에는 원하시는 채널의 이름을 입력하시면 됩니다. 이 채널명은
+강좌 페이지의 채널 정보에 표시됩니다.
 
 로고 이미지로는 채널을 대표할 수 있는 로고를 업로드하시면 됩니다.
 로고 이미지는 가로 40~200px, 세로 40px로 보여지므로, 이에 맞는 비율의 이미지를 업로드하시는 것을 추천드립니다.
-로고 이미지는 채널 사이트 내 네이게이션에 채널명과 함께 항시 표시되며,
-별도의 선생님을 등록하지 않으신 경우 강좌의 선생님 정보에도 표시됩니다.
+로고 이미지는 강좌 페이지의 채널 정보에 표시됩니다.
 
 채널 소개는 채널에 대한 소개를 적으시면 됩니다.
-채널 사이트에서는 별도로 채널 소개가 보여지는 곳은 없으며,
-별도의 선생님을 등록하지 않으신 경우 강좌의 선생님 정보에 표시됩니다.
+강좌 페이지의 채널 정보에 표시됩니다.
 
 ---
 
 #### 헤더는 어떻게 만드나요?
 헤더는 채널 사이트 상단에 위치하며, 이미지 및 제목을 통해서 사용자에게 현재 이용하고 있는 채널에 대한 정보를 제공합니다.
 헤더는 제작 페이지에서 실시간으로 미리보기가 가능하므로 이를 통해서 실제 채널에서 어떻게 보일지를 확인하실 수 있습니다.
+
+헤더 이미지는 기본적으로 가로 1920px, 세로 240~480px에 맞추어서 제작해주시기 바랍니다.
+모든 해상도에 잘 대응하는 헤더를 위해서는, 가운데 640px 안에 중요한 내용을 모두 입력하시고
+양 옆의 공간은 이미지만 삽입하시길 권해드립니다.
 
 미리보기에 보인다고 해서 저장된 것은 아니므로 내용을 추가하거나 변경하신 후에는 반드시 저장하기 버튼을 누르셔서 저장해주시기 바랍니다.
 
@@ -63,6 +65,8 @@ order: 6
 
 #### 페이지는 무엇인가요?
 페이지는 채널 사이트에서 헤더와 내비게이션 아래에 위치하며, 실제로 컨텐츠를 담고 있는 부분이라고 할 수 있습니다.
+기본적으로 모든 채널은 보유하고 계신 강좌가 모두 보여지는 페이지를 가지고 있습니다.
+
 [페이지 생성] 버튼을 클릭하신 후 제목과 URL을 입력하시면 페이지가 생성됩니다.
 이렇게 생성하신 페이지를 내비게이션에 추가하시거나 홈으로 등록하시면 사용자가 채널 내에서 해당 페이지에 접근할 수 있게 됩니다.
 이후 해당 페이지를 아래 테이블에서 클릭하시면 페이지를 편집하실 수 있습니다.
@@ -73,6 +77,18 @@ order: 6
 ---
 
 #### 개별 페이지의 편집은 어떻게 해야 하나요?
+개별 페이지는 블럭이라고 불리는 조각들로 구성되어 있습니다.
+각각의 특징을 가진 이 블럭들을 이어붙여서 페이지를 원하시는 대로 구성하실 수 있습니다.
+현재는 텍스트 블럭, 배경이 있는 텍스트 블럭, 카테고리 블럭이 있습니다.
+
+텍스트 블럭은 기본적인 블럭으로 원하시는 글을 입력하실 수 있습니다.
+텍스트 블럭의 편집기는 rich text editor이기 때문에, 폰트나 글자크기를 조정하시거나, 정렬 위치를 바꾸시거나, 이미지를 삽입하실 수도 있습니다.
+
+배경이 있는 텍스트 블럭은 텍스트 블럭과 동일하지만, 배경 이미지를 삽입하실 수 있는 블럭입니다.
+배경 이미지는 전체 화면에 걸쳐서 보여지기 때문에, 화면 사이즈에 따라서 어떻게 보일지 신경써서 등록해주시기 바랍니다.
+
+카테고리 블럭은 선택한 카테고리에 있는 강좌의 카드를 페이지에서 볼 수 있게 하는 블럭입니다.
+제목을 입력하고 원하시는 카테고리를 선택하시면 페이지 내 해당 블럭의 위치에 강좌들이 보이게 됩니다.
 
 
 ---
