--- a/_posts/2016-10-04-play.md
+++ b/_posts/2016-10-04-play.md
@@ -72,9 +72,9 @@ PC/Mac 및 모바일 웹 브라우저에서는 플레이어의 우측 하단에 
 
 |                   | Chrome<br>(38이상) | Firefox<br>(42이상) | Safari<br>(8이상) | Edge | IE11 | IE10 | IE9 | IE8 | Android<br>Browser |
 |-------------------|-----------------|------------------|----------------|------|------|------|-----|-----|-----------------|
-| Windows 10        |        O        |         O        |                |   O  |   O  |      |     |     |                 |
-| Windows 8.1       |        O        |         O        |                |      |   O  |   O  |     |     |                 |
-| Windows 8         |        O        |         O        |                |      |   O  |   O  |     |     |                 |
+| Windows 10        |        O        |         O        |                |   O  |      |      |     |     |                 |
+| Windows 8.1       |        O        |         O        |                |      |      |      |     |     |                 |
+| Windows 8         |        O        |         O        |                |      |      |      |     |     |                 |
 | Windows 7         |        O        |         O        |                |      |      |      |     |     |                 |
 | Windows XP        |        O        |         O        |                |      |      |      |     |     |                 |
 | OSX 10.11         |        O        |         O        |        O       |      |      |      |     |     |                 |
@@ -86,7 +86,7 @@ PC/Mac 및 모바일 웹 브라우저에서는 플레이어의 우측 하단에 
 | iOS 8             |        O        |         ?        |        O       |      |      |      |     |     |                 |
 
 만약 O 표시가 되어있는 브라우저 및 운영체제를 사용하고 있음에도 불구하고 배속 재생이 되지 않는 경우,
-[1:1 문의](https://educast.pro/support/qna/create/)에 증상을 주세요.
+[1:1 문의](https://educast.pro/support/qna/create/)에 증상을 말씀해주시기 바랍니다.
 
 Android 및 iOS 앱에서는 상관없이 배속이 지원됩니다. 재생 창의 오른쪽 상단에 [1.0x] 버튼을 누르시면 배속을 선택할 수 있습니다.
 
