--- a/_posts/2016-11-21-support.md
+++ b/_posts/2016-11-21-support.md
@@ -3,7 +3,7 @@ title: 원격 지원 가이드
 category: student
 order: 9
 ---
-# 원격 지원 요청하기
+#### 원격 지원 요청하기
 에듀캐스트에서는 고객님의 불편사항을 접수시 원격 지원을 통해 문제를 해결해드리고 있습니다. 원격 지원 절차는 다음과 같습니다.
 
 1. (필수) 원격 지원을 위한 프로그램 설치 ([아래 가이드 참조](#원격-지원-프로그램-설치방법))
@@ -17,7 +17,9 @@ order: 9
 ![](https://cloud.githubusercontent.com/assets/7759511/20472990/02ea493a-b001-11e6-8fea-359bbc2b81aa.png)
 ***그림 1. 에듀캐스트 1:1 문의 페이지***
 
-# 원격 지원 프로그램 설치방법
+---
+
+#### 원격 지원 프로그램 설치방법
 원격 지원을 위해서 구글의 '크롬 브라우저(Chrome Browser)'와 크롬 브라우저를 통해 사용할 수 있는 '크롬 원격 데스크톱(Chrome Remote Desktop)'이라는 플러그인을 사용합니다. 크롬 원격 데스크톱 사용을 위해서는 구글 계정이 필요하고, 아래와 같은 절차에 따라 원격 지원을 위해  
 
 본 원격 지원 가이드에서는  
@@ -29,7 +31,10 @@ order: 9
 
 총 4단계로  나눠 설명을 진행합니다. 이미 크롬을 설치하셨거나 구글 계정이 있으신 분들은 앞의 단계들을 건너뛰셔도 무방합니다.
 
-# 크롬 브라우저 설치
+#### 크롬 브라우저 설치
+
+---
+
 크롬 브라우저는 최신 웹에 최적화된 신속하고 간단하며 안전한 웹 브라우저입니다. 크롬 브라우저의 특징은 [이 곳](https://www.google.co.kr/chrome/browser/features.html)에서 확인하실 수 있습니다. 
 
 1) [크롬 브라우저 다운로드 페이지 접속](https://www.google.co.kr/chrome/browser/desktop/index.html) <- 클릭하신 후 아래 그림에서 보이는 'Chrome 다운로드' 버튼 클릭  
@@ -59,8 +64,9 @@ order: 9
 ![image](https://cloud.githubusercontent.com/assets/7759511/20475990/0b599b32-b012-11e6-834c-441e803bffb0.png)
 ***그림 5. 설치완료 후 켜진 크롬 브라우저***
 
+---
 
-# 구글 계정 생성
+#### 구글 계정 생성
 1) [구글 로그인 or 회원가입 페이지 가기 <- 클릭](https://accounts.google.com/ServiceLogin)
 크롬 브라우저 설치를 마치고, 크롬 브라우저의 **추가기능**을 이용하기 위해선 구글 계정이 필요합니다. 이번 차례는 구글 계정이 없으신 분들을 위한 설명이니 구글 계정이 있으신 경우 건너뛰셔도 됩니다. 아래 화면에서 '계정 만들기' 버튼을 눌러주세요.
 
@@ -85,8 +91,9 @@ order: 9
 
 ![image](https://cloud.githubusercontent.com/assets/7759511/20479436/8747e000-b021-11e6-9cb6-9ac4aafb3032.png)
 
+---
 
-ㅈ# 크롬 원격 데스크톱 플러그인 설치
+#### 크롬 원격 데스크톱 플러그인 설치
 1) [크롬 원격 데스크탑 설치페이지](https://chrome.google.com/webstore/detail/chrome-remote-desktop/gbchcmhmhahfdphkhkmpfmihenigjmpp?hl=ko) <- 클릭해주세요. 다음과 같은 페이지가 나타나고, 'Chrome에 추가' 버튼을 클릭해주세요.
 
 
@@ -122,8 +129,9 @@ order: 9
   * 원격 지원 서비스 시간은 월-금 오전 9시 - 오후 7시입니다. 그 이외의 시간에만 가능하시다면, 담당자와 협의를 통해 시간을 조율할 수 있습니다.
   * 원격 지원을 위한 프로그램을 먼저 설치하시고 접수를 하셔야 담당자 배정이 됩니다.
 
+---
 
-# 에듀캐스트 담당자와의 연결
+#### 에듀캐스트 담당자와의 연결
 원격 지원 서비스시 담당자와의 커뮤니케이션은 음성통화를 이용합니다. 이번 설명은 담당자와 통화를 하고 있는 상황을 가정한 설명입니다.
 
 
