--- a/_posts/2017-01-24-android.md
+++ b/_posts/2017-01-24-android.md
@@ -19,7 +19,7 @@ order: 10
 
 2. 삼성
   - 갤럭시 노트 7
-  - 갤럭시 S7, 갤럭시 S7 엣지 (갤럭시 S7에서 배속이 끊기는 문제가 있으며, 이를 구글 및 삼성에 전달해 문제 해결중입니다. 갤럭시 S7에 국한된 문제로 제조사의 버그 수정 업데이트를 기다려주세요.)
+  - 갤럭시 S7, 갤럭시 S7 엣지
   - 갤럭시 J3(2016), 갤럭시 J5(2016), 갤럭시 J7(2016), 갤럭시 와이드
   - 갤럭시 탭 A 2016
   - 갤럭시 S6, 갤럭시 S6 엣지
@@ -91,5 +91,6 @@ order: 10
 
 
 - 에듀캐스트 구 안드로이드 앱 2.x.x버전에서는 전 기종에서 사용가능한 자체개발 배속기능을 제공했으나, 구글이 공식적으로 배속기능을 지원함에 따라 안정성을 더 우선시하여 구글의 공식 배속기능을 이용하게 되었습니다. 최근 출시된 안드로이드 운영체제에서만 배속기능을 제공하게되었습니다.
-- 에듀캐스트는 구글의 [ExoPlayer](https://github.com/google/ExoPlayer)라는 비디오 플레이어를 사용합니다. ExoPlayer측에 문의 결과 2017년 상반기에 안드로이드 하위버전 배속기능 개발일정이 잡혀있다는 답변이 돌아왔습니다. ExoPlayer에서 하위버전 배속을 제공하는대로 안드로이드 마쉬멜로우 버전 이하의 기기 수강생분들께서도 배속기능을 이용하실 수 있도록 하겠습니다.
-- 갤럭시 S7에서 1.5배 이상 배속시 끊김 현상이 있습니다. 구글측에 [문의한 결과](https://github.com/google/ExoPlayer/issues/1764) 이는 제조사 삼성의 문제로 확인이 되어 현재 버그 수정중에 있고, 버그 해결이 확인되는 대로 앱 내부 공지사항을 통해 공지해드리겠습니다. 불편하시겠지만 1.2-1.5배속과 같이 약한 배속을 이용해주시길 바랍니다.
+- 구글 측에 문의 결과 2017년 상반기에 안드로이드 하위버전 배속기능 개발일정이 잡혀있다는 답변이 돌아왔습니다. 구글에서 하위버전 배속을 제공하는대로 안드로이드 마쉬멜로우 버전 이하의 기기 수강생분들께서도 배속기능을 이용하실 수 있도록 하겠습니다.
+- 갤럭시 S7, 갤럭시노트5등 일부 삼성기기에서 1.5배이상 배속시 끊김 현상이 있습니다(삼성측 개발오류). 2017년 1월 20일 배포된 갤럭시 S7 누가 업데이트 적용시 문제가 해결된 것을 확인했습니다. 2017년 상반기 삼성기기들의 누가 업데이트를 통해 해결될 예정입니다.
+- ~~갤럭시 S7에서 1.5배 이상 배속시 끊김 현상이 있습니다. 구글측에 [문의한 결과](https://github.com/google/ExoPlayer/issues/1764) 이는 제조사 삼성의 문제로 확인이 되어 현재 버그 수정중에 있고, 버그 해결이 확인되는 대로 앱 내부 공지사항을 통해 공지해드리겠습니다. 불편하시겠지만 1.2-1.5배속과 같이 약한 배속을 이용해주시길 바랍니다.~~
