Update Help Center Pages

--- a/_posts/2017-04-26-android.md
+++ b/_posts/2017-04-26-android.md
@@ -9,6 +9,7 @@ order: 10
 [구글 플레이 베타테스터 신청링크 (클릭)](https://play.google.com/apps/testing/com.tntcrowd.educast)
 - 베타 테스터 전환 대기 (1-2시간이 소요)
 - 미디어 파일 다운로드 기능 베타테스트. (인터넷 연결이 되어 있어야하지만, 시간당 1~5MB 소모)
+- 베타테스트 기간엔 업데이트시 다운로드된 미디어 파일이 초기화 될 수 있으니 유의해주시기 바랍니다.
 - 문의사항 혹은 진행상황이 궁금하다면 이 페이지를 통해 확인 / 에듀캐스트 1:1문의 이용 / 담당자 류기민(ryu@tntcrowd.com)으로 이메일 세가지 수단을 이용해주세요!
 
 2. 현재 인지하고 있는 문제
