Update Help Center Pages

--- a/_posts/2017-07-07-channel.md
+++ b/_posts/2017-07-07-channel.md
@@ -11,11 +11,25 @@ order: 6
 강좌 군을 원하시는 대로 묶어서 브랜딩하시거나 프로모션을 하실 수 있습니다.
 
 지속적으로 기능을 추가해나갈 예정이오니, 채널을 사용하시는데 있어서 불편하신 점이 있으시다거나
-원하시는 기능이 있으시다면 저희 제품 개발팀(jwmoon@tntcrowd.com)으로 연락 부탁드립니다.
+원하시는 기능이 있으시다면 저희 제품 개발팀(educast@tntcrowd.com)으로 연락 부탁드립니다.
 
 ---
 
-####	채널 정보는 어떻게 입력해야 하나요?
+#### 플랜은 무엇인가요?
+플랜은 선생님이 운영할 사이트 유형을 의미합니다.
+에듀캐스트는 선생님 회원들에게 2가지 형태의 내 사이트를 제공해드리고 있는데, 플랜선택에 따라 내 사이트의 유형이 달라집니다.
+
+베이직 플랜을 선택하실 경우 선생님 정보 및 소개 작성만으로도 빠르게 내 사이트를 꾸밀 수 있어 간편합니다.
+에듀캐스트에서 처음 강좌를 개설하는 선생님 또는 강좌 수가 많지 않는 선생님들에게 추천해드리는 플랜입니다.
+
+어드밴스 플랜을 선택하시면 독립적인 내 사이트를 직접 제작하고 관리하실 수 있습니다.
+소개 페이지, 프로모션 페이지 등 원하는 페이지를 만들어서 내 사이트를 꾸밀 수 있습니다. 
+여러 개의 강좌를 가르치는 선생님, 개인 브랜딩이 필요한 선생님, 다수의 강좌를 유통하는 에이전시에게 추천하는 플랜입니다.
+([채널소개 영상보기](https://www.youtube.com/embed/P3vQSkLlK60))
+
+---
+
+#### 채널 정보는 어떻게 입력해야 하나요?
 채널 정보에는 채널명, 로고 이미지, 채널 소개 등 3가지의 정보를 입력하는 공간이 있습니다.
 
 채널명에는 원하시는 채널의 이름을 입력하시면 됩니다. 이 채널명은
