Update Help Center Pages

--- a/_posts/2017-07-21-browse.md
+++ b/_posts/2017-07-21-browse.md
@@ -28,7 +28,7 @@ PC로 접속하신 경우 사이트 우상단에 있는 강좌의 '둘러보기'
 
 #### 강좌에서 확인하고 싶은 점이 있어요. 선생님께 연락해볼 수 있는 방법이 있나요?
 강좌 페이지 오른쪽에 '선생님 정보 탭'이 있습니다.
-선생님 탭의 선생님 성함 오른쪽에 있는 '쪽지보내기' 버튼을 클릭하시면 해당 선생님께 쪽지를 보낼 수 있습니다.
+선생님 탭의 선생님 성함 아래쪽에 있는 '쪽지 보내기' 버튼을 클릭하시면 해당 선생님께 쪽지를 보낼 수 있습니다.
 또한 [선생님 페이지](#선생님-페이지는-무엇인가요)에서도 '쪽지보내기'를 통해서 선생님께 쪽지를 보낼 수 있습니다.
 
 ---
