--- a/_posts/2017-07-14-paycheck.md
+++ b/_posts/2017-07-14-paycheck.md
@@ -4,22 +4,142 @@ category: teacher
 order: 4
 ---
 #### 수익 분배는 어떻게 이루어지나요?
-선생님과 에듀캐스트의 수익분배(Revenue Share)는 7:3으로 나눠집니다.
-에듀캐스트는 강의 판매 시, 발생한 부가세 및 금융수수료(결제수수료)를 제외한 수익의 70%를 강사에게 분배합니다.
+선생님은 강좌 매출액의 70%에서 결제수수료를 공제한 금액을 분배 받으시게 됩니다. 결제수단과 세금관계 등에 따라 실제 송금 해드리는 비율이 다르니 구체적인 사항은 아래를 참고해주십시오.  
+고객이 지불한 액수 합계를 (100+부가가치세)라하고, 결제수수료를 A, 결제수수료의 부가가치세를 a라고 했을 때 아래와 같습니다.  
+<table>
+<th>분류</th>
+<th>선생님수익</th>
+<th>부가가치세</th>
+<th>원천징수액</th>
+<th>송금액</th>
+<tr>
+<td>과세사업자</td>
+<td>70-A</td>
+<td>7-a</td>
+<td>0</td>
+<td>77-(A+a)</td>
+</tr>
+<tr>
+<td>면세사업자</td>
+<td>70-A</td>
+<td>0</td>
+<td>0</td>
+<td>70-A</td>
+</tr>
+<tr>
+<td>개인(사업소득)</td>
+<td>70-A</td>
+<td>0</td>
+<td>(70-A)*0.033</td>
+<td>(70-A)*0.967</td>
+</tr>
+<tr>
+<td>개인(기타소득)</td>
+<td>70-A</td>
+<td>0</td>
+<td>(70-A)*0.044</td>
+<td>(70-A)*0.956</td>
+</tr>
+</table>
+
+사업소득은 교육활동이 본업인 사람에게 적용되며 추후 종합소득세를 납부할 때 소득으로 합산됩니다. 기타소득은 연간 1500만원 이내에서 교육활동이 본업이 아닌 분께 적용됩니다.  
+
+결제수수료율은 아래와 같습니다.
+<table>
+<tr>
+<th> 결제대행사 </th>
+<th> 결제수단 </th>
+<th> 방식 </th>
+<th> 수수료(VAT 별도) </th>
+<th> 비고 </th>
+</tr>
+<tr>
+<td rowspan=4>KG이니시스</td>
+<td>국내카드</td>
+<td>비율제</td>
+<td>3.2%</td>
+<td></td>
+</tr>
+<tr>
+<td>해외카드</td>
+<td>비율제</td>
+<td>4.0%</td>
+<td></td>
+</tr>
+<tr>
+<td>실시간 계좌이체</td>
+<td>비율제</td>
+<td>1.8%</td>
+<td></td>
+</tr>
+<tr>
+<td>가상계좌</td>
+<td>건당제</td>
+<td>300원</td>
+<td></td>
+</tr>
+<tr>
+<td>다날</td>
+<td>휴대폰결제</td>
+<td>비율제</td>
+<td>7.0%</td>
+<td></td>
+</tr>
+<tr>
+<td>카카오페이</td>
+<td>국내카드</td>
+<td>비율제</td>
+<td>3.2%</td>
+<td></td>
+</tr>
+<tr>
+<td>Paypal</td>
+<td>Paypal</td>
+<td>비율제</td>
+<td> 약 4~6%<br></td>
+<td>구매자의 국가 등에 따라 수수료가 상이함.<br>
+<a href="https://www.paypal.com/kr/webapps/mpp/ua/useragreement-full#exhibit_A">자세한 내용보기</a> </td>
+</tr>
+<tr>
+<td rowspan=3>시럽페이</td>
+<td>국내카드</td>
+<td>비율제</td>
+<td>별도 문의</td>
+<td></td>
+</tr>
+<tr>
+<td>계좌이체</td>
+<td>건당제</td>
+<td>별도 문의</td>
+<td></td>
+</tr>
+<tr>
+<td>휴대폰결제</td>
+<td>비율제</td>
+<td>별도 문의</td>
+<td></td>
+</tr>
+<tr>
+<td>Apple</td>
+<td>iOS 앱 내 결제</td>
+<td>비율제</td>
+<td>약 30%</td>
+<td></td>
+</tr>
+</table>
+
 
 ---
 
 #### 수익 정산은 언제 진행되나요?
-강의 판매에 따른 수익 정산 및 지급은 월 단위로 진행되며, 당월의 판매수익은 매달 익월 20일날 지급됩니다.
+강좌 판매에 따른 수익 정산 및 지급은 월 단위로 진행되며, 당월의 판매수익은 매달 익월 20일날 지급됩니다.
 
 ---
 
 #### 제가 번 수익이 얼마인지 어디에서 확인할 수 있나요?
-에듀캐스트 선생님으로 등록하셨다면 제일 우측 상단에 본인 이름을 클릭하시면 [선생님 페이지] 탭이 보이실 겁니다.
-선생님 페이지를 클릭하신 후, 좌측 상단에 보이는 여러 탭 중 [수익 및 지급]에 속한 [수익 개요]에 가시면 수익을 확인하실 수 있습니다.
+에듀캐스트 선생님으로 등록하셨다면 상단에 [선생님] 혹은 [채널] 이라는 버튼이 보이실 겁니다. 해당 버튼에 마우스를 올렸을 때 나타나는 하위 항목 중 [수익 내역] 페이지로 이동하시면 수익을 확인하실 수 있습니다.
 
 ---
 
 #### 지난 달 정산을 못 받았어요.
-에듀캐스트는 매월 20일에 전월에 판매된 강의수익을 지급해드리고 있습니다.
-만약 전 달에 강의가 판매됐는데 정산을 못 받으셨다면, 저희 사무실 전화번호 02-883-0806로 연락을 주시거나 에듀캐스트 페이지에서 1:1 문의를 주시면 정산처리 담당자가 신속히 처리해드립니다.
+에듀캐스트는 매월 20일에 지난달 발생한 판매수익을 정산해드리고 있습니다. 정산에 필요한 서류(신분증, 통장사본 등)를 보내주셔야 정산을 해드릴 수 있으며, 관련 내용을 매월 10일 경 메일을 통해 안내드리고 있습니다. 만약 지난달에 강좌가 판매됐는데 정산을 못 받으셨다면, 전화(02-883-0806) 또는 에듀캐스트 1:1 문의로 연락을 주시면 정산처리 담당자가 확인 후 신속히 처리해드리겠습니다.
