Update Help Center Pages

--- a/_posts/2017-10-30-paycheck.md
+++ b/_posts/2017-10-30-paycheck.md
@@ -46,4 +46,4 @@ order: 4
 ---
 
 #### 지난 달 정산을 못 받았어요.
-에듀캐스트는 매월 20일에 지난달 발생한 판매수익을 정산해드리고 있습니다. 정산에 필요한 서류(신분증, 통장사본 등)를 보내주셔야 정산을 해드릴 수 있으며, 관련 내용을 매월 10일 경 메일을 통해 안내드리고 있습니다. 만약 지난달에 강좌가 판매됐는데 정산을 못 받으셨다면, 전화(02-883-0806) 또는 에듀캐스트 1:1 문의로 연락을 주시면 정산처리 담당자가 확인 후 신속히 처리해드리겠습니다.
+에듀캐스트는 매월 20일에 지난달 발생한 판매수익을 정산해드리고 있습니다. 정산정보에 정산 받으실 계좌를 입력하신 후 정산에 필요한 서류(신분증, 통장사본 등)를 보내주셔야 정산을 해드릴 수 있으며, 관련 내용을 매월 10일 경 메일을 통해 안내드리고 있습니다. 만약 지난달에 강좌가 판매됐는데 정산을 못 받으셨다면, 전화(02-883-0806) 또는 에듀캐스트 1:1 문의로 연락을 주시면 정산처리 담당자가 확인 후 신속히 처리해드리겠습니다.
