Update Help Center Pages

--- a/_posts/2017-12-14-account.md
+++ b/_posts/2017-12-14-account.md
@@ -15,16 +15,16 @@ order: 4
 #### 비밀번호를 바꾸고 싶어요.
 비밀번호 변경은 '프로필'에서 하실 수 있습니다.
 프로필은 PC로 접속하신 경우 우상단의 '유저명'을 클릭하면 나오는 메뉴에, 모바일 브라우저로 접속하신 경우 좌상단 아이콘을 클릭하면 나오는 메뉴에 위치하고 있습니다.(앱에서는 비밀번호 변경이 불가능합니다.)
-[프로필 페이지 바로가기](https://educast.pro/account/profile/)
+[프로필 페이지 바로가기](https://educast.com/account/profile/)
 
 ---
 
 #### 이름을 변경하고 싶어요.
 죄송합니다. 이름 변경 기능은 추가 중에 있습니다.
-불편하시겠지만 [1:1 문의](https://educast.pro/support/qna/create/)를 통해서 요청해주시면 이름 변경을 도와드리겠습니다.
+불편하시겠지만 [1:1 문의](https://educast.com/support/qna/create/)를 통해서 요청해주시면 이름 변경을 도와드리겠습니다.
 
 ---
 
 #### 탈퇴하고 싶어요.
 죄송합니다. 탈퇴 기능은 추가 중에 있습니다.
-불편하시겠지만 [1:1 문의](https://educast.pro/support/qna/create/)를 통해서 요청해주시면 탈퇴를 도와드리겠습니다.
+불편하시겠지만 [1:1 문의](https://educast.com/support/qna/create/)를 통해서 요청해주시면 탈퇴를 도와드리겠습니다.
