--- a/_posts/2017-12-14-browse.md
+++ b/_posts/2017-12-14-browse.md
@@ -5,7 +5,7 @@ order: 1
 ---
 #### 에듀캐스트에 어떤 강좌가 있는지 볼 수 있을까요?
 PC로 접속하신 경우 사이트 우상단에 있는 강좌의 '둘러보기' 버튼을 클릭하시거나
-[이곳](https://educast.pro/search/)을 클릭하시면 에듀캐스트에 올라와 있는 모든 강좌를 둘러보실 수 있습니다.
+[이곳](https://educast.com/search/)을 클릭하시면 에듀캐스트에 올라와 있는 모든 강좌를 둘러보실 수 있습니다.
 좌측의 사이드 메뉴에서 각 카테고리를 클릭하시면 해당 카테고리의 강좌를 모아보실 수 있습니다.
 찾아보기 페이지의 오른쪽 끝에 '전체강좌', '업데이트 순'이라고 되어 있는 곳에서 필터 및 정렬순서를 지정하실 수 있습니다.
 
