--- a/_posts/2018-01-03-play.md
+++ b/_posts/2018-01-03-play.md
@@ -20,6 +20,16 @@ Android에서는 [에듀캐스트 앱](https://play.google.com/store/apps/detail
 
 ---
 
+#### 구형 브라우저의 업데이트는 어떻게 하나요?
+
+Microsoft의 공식적인 지원이 종료됨에 따라 저희 에듀캐스트 또한 Internet Explorer 9, 10에 대한 지원을 중단합니다.
+구형 브라우저를 계속 이용하시면 사이트 이용에 문제가 발생하실 수 있어 다음과 같은 방법으로 브라우저 업그레이드를 추천해드립니다.
+
+1. [Chrome 브라우저(링크)](https://www.google.co.kr/chrome/browser/desktop/)
+2. [Internet Explorer 11 for Windows 7(링크)](https://www.microsoft.com/ko-kr/download/internet-explorer-11-for-windows-7-details.aspx)
+
+---
+
 #### 재생이 안돼요.
 강의가 재생 불가능 문제는 몇 가지의 원인으로 인해서 발생할 수 있습니다.
 
