--- a/_posts/2018-06-01-android.md
+++ b/_posts/2018-06-01-android.md
@@ -38,7 +38,11 @@ order: 10
 
 혹시 Wi-Fi에 연결하셨나요? 다운로드의 경우 대용량 파일을 받기 때문에 Wi-Fi가 연결되어 있을 때만 다운로드가 되도록 설정이 되어 있습니다. Wi-Fi 연결이 해제되면 모든 다운로드가 대기중으로 변하며, 다시 Wi-Fi가 연결되었을 때 다운로드가 자동으로 재시작됩니다. 
 
-그럼에도 불구하고 다운로드가 멈춰있는 경우가 있습니다. 이는, Android 운여체제 혹은 배터리 관리 앱 등에 의해 다운로드 백그라운드 서비스가 종료되었기 때문입니다. 이 경우 우측 상단의 재시작 버튼을 눌러주시면 다시 백그라운드 서비스가 시작됩니다.
+그럼에도 불구하고 다운로드가 멈춰있는 경우가 있습니다. 이는, Android 운영체제 혹은 배터리 관리 앱 등에 의해 다운로드 백그라운드 서비스가 종료되었기 때문입니다. 이 경우 우측 상단의 재시작 버튼을 눌러주시면 다시 백그라운드 서비스가 시작됩니다.
+
+#### 다운로드/다운로드 삭제가 너무 느립니다.
+
+저희 앱에 오프라인 재생을 위해 다운로드 되는 파일은 mp4, avi등 일반 미디어 파일이 아닌, 특수한 형태의 미디어 파일입니다. 이에 기술적으로 다운로드 및 삭제가 느린 문제가 발생하였고, 이를 개선하기 위한 방안들을 준비중에 있습니다. 다운로드의 경우 Wi-Fi환경에서 자동으로 순차적으로 진행이 되므로 취침시간대등을 활용하시는 것을 권해드립니다. 다운로드 삭제의 경우 전체 파일 삭제 기능을 곧 제공해드리도록 하겠습니다.  
 
 #### 같은 스마트폰인데 등록된 기기가 다르다고 나오면 어떻게 하나요?
 
