Update Help Center Pages

--- a/_posts/2018-07-10-paycheck.md
+++ b/_posts/2018-07-10-paycheck.md
@@ -36,7 +36,46 @@ order: 4
 ---
 
 #### 수익 정산은 언제 진행되나요?
-강좌 판매에 따른 수익 정산 및 지급은 월 단위로 진행되며, 당월의 판매수익은 매달 익월 20일날 지급됩니다.
+강좌 판매에 따른 수익 정산 및 지급은 월 단위로 진행되며, 당월의 확정수익은 매달 익월 20일날 지급됩니다.
+
+---
+
+#### 정산 절차는 어떻게 되나요?
+
+|수강생이 수강 신청|수강생이 수강/ 만료/ 부분환불 시|세금처리 완료 시|
+|-|-|-|
+|미확정 수익 발생|해당 금액 만큼 미확정수익 → 확정수익 전환|확정수익 지급 (익월 20일)|
+
+---
+
+#### 확정수익 미확정수익은 무엇인가요?
+
+수강생이 결제한 이후 환불이 불가능해졌을 때 수익이 확정됩니다. 선생님은 확정된 수익만 지급 받으실 수 있습니다. 
+
+---
+
+#### 어떤 경우 환불이 불가능해지나요?
+
+* 수강기간이 만료된 경우 전액 확정
+* 부분환불의 경우 기 수강분 
+
+---
+
+#### 확정수익 제도는 왜 운영하나요?
+
+에듀캐스트는 관계 법령 등에 따라 학습자의 환불권을 보호하고 있습니다. 확정되기 이전에 수익을 지급한 이후, 해당 수강생이 환불을 요청하는 경우 문제가 발생할 수 있기 때문에 확정수익 제도를 운영하고 있습니다. (참고 : 환불규정, [관계법령](http://easylaw.go.kr/CSP/CnpClsMain.laf?popMenu=ov&csmSeq=659&ccfNo=3&cciNo=1&cnpClsNo=2))
+
+---
+
+#### 빠른정산 강좌는 무엇인가요?
+
+전액환불이 일어날 가능성이 낮다고 에듀캐스트가 인정한 강좌입니다. 이 경우 학생의 수강이 끝나지 않더라도 수강률에 비례하여 수익이 확정됩니다. 
+
+---
+
+#### 빠른 정산 강좌 인증은 어떻게 이루어지나요?
+
+강좌를 업로드하신 이후 일정 기간 기간동안 에듀캐스트 팀에서 모니터링하여 인증합니다. 별도로 신청하실 필요는 없습니다. 만약 오랜기간 활동을 하셨는데도 검토에서 누락된 것으로 판단되신다면 저희 1:1문의를 통해 글을 남겨주시기 바랍니다.
 
 ---
 
