Update Help Center Pages

--- a/_posts/2018-08-09-paycheck.md
+++ b/_posts/2018-08-09-paycheck.md
@@ -42,7 +42,7 @@ order: 4
 
 #### 정산 절차는 어떻게 되나요?
 
-|수강생이 수강 신청|수강생이 수강(빠른정산)/ 만료/ 부분환불 시|세금처리 완료 시|
+|수강생이 수강 신청|수강생이 수강([빠른정산](https://help.educast.com/teacher/paycheck/#%EB%B9%A0%EB%A5%B8%EC%A0%95%EC%82%B0-%EA%B0%95%EC%A2%8C%EB%8A%94-%EB%AC%B4%EC%97%87%EC%9D%B8%EA%B0%80%EC%9A%94))/ 만료/ 부분환불 시|세금처리 완료 시|
 |-|-|-|
 |미확정 수익 발생|해당 금액 만큼 미확정수익에서 확정수익으로 전환|확정수익을 예치금으로 전환 후 지급 (익월 20일)|
 
@@ -54,16 +54,16 @@ order: 4
 - 예치금은 매월 20일날 지급됩니다.  [채널]-[수익내역]-[정산정보변경] 에 등록하신 계좌로 송금됩니다. 이때 이체되는 금액은 "지난 달의 확정 수익에 대한 예치금"입니다.  지난 달의 [수익상세]-[확정 수익 발생일 기준] 지급액의 총합이 이체됩니다.
 
 (예시)과세사업자가 11000원짜리 무통장 입금을 통해 강좌를 판 경우. (최종 예상 수익 : 11000*((1 - 0.3)*(1+0.1)/(1+0.1)) - 300*(1+0.1) = 7370원  )
-- (2018/5/1)강좌 구매 : <미확정수익>7370원 생성
-- (2018/9/2)수강 기간 만료 : 미확정 수익이 확정 수익으로 전환, <미확정수익>0원, <확정수익>7370원
+- (2018/5/1)강좌 구매 : <미확정수익> 7370원 생성
+- (2018/9/2)수강 기간 만료 : <미확정수익>이 <확정수익>으로 전환, <미확정수익>0원, <확정수익>6700원
 - (2018/10/13)세금계산서 요청 및 회신 : <확정 수익>이 <예치금>으로 전환, <확정 수익> 0원, <예치금>7370원
 - (2018/10/20)수익지급 : <예치금>7370원 송금
 
-기타소득자가 11000원짜리 무통장 입금을 통해 강좌를 판 경우. (최종 예상 수익 : (11000*((1 - 0.3)*(1)/(1+0.1)) - 300)*0.934 = 6258원  )
+기타소득자가 11000원짜리 무통장 입금을 통해 강좌를 판 경우. (최종 예상 수익 : (11000*((1 - 0.3)*(1)/(1+0.1)) - 300)*0.934 = 6258원)
 - (2018/5/1)강좌 구매 : <미확정수익> (11000*((1 - 0.3)*(1)/(1+0.1)) - 300=6700원 생성
-- (2018/9/2)수강 기간 만료 : 미확정 수익이 확정 수익으로 전환, <미확정수익>0원, <확정수익>6700원
+- (2018/9/2)수강 기간 만료 : <미확정 수익>이 <확정 수익>으로 전환, <미확정수익>0원, <확정수익>6700원
 - (2018/9/2)자동세금처리 : <확정 수익>이 <예치금>으로 전환, <확정 수익> 0원, <예치금>6258원
-- (2018/10/20)수익지급 : <예치금>6258원 송금
+- (2018/10/20)수익지급 : <예치금> 6258원 송금
 
 ---
 
